# anime-pls

./: .gitignore  Cargo.toml  README.md
grrs/: Cargo.toml
grrs/src/: main.rs
src/: lib.rs  main.rs  types.rs  util.rs
