[package]
name = "ani_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking"]}
anyhow = "1.0.56"
clap = {version = "3.1.6", features = ["derive"]}
select = "0.5.0"