[package]
name = "anime-pls"
version = "0.1.2"
edition = "2021"
authors = ["rohit <me@diru.tech>"]
license = "MIT OR Apache-2.0"
description = "A tool to search and play anime"
readme = "README.md"
homepage = "https://github.com/me-diru/anime-cli"
repository = "https://github.com/me-diru/anime-cli"
keywords = ["cli", "play", "anime"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking"]}
anyhow = "1.0.56"
clap = {version = "3.1.6", features = ["derive"]}
select = "0.5.0"
termcolor = "1.1.3"
requestty = "0.3.0"
openssl = "0.10.38"
webbrowser = "0.6.0"
rust-argon2 = "0.8"